bar-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar
  namespace: ingress-nginx
spec:
  selector:
    app: bar
  ports:
    - protocol: TCP
      port: 80        # Port exposed by the Service (for the Ingress to route traffic to)
      targetPort: 6789 # The port inside the container where http-echo is listening
  type: ClusterIP
